--- a/apps/ui/src/components/color/color.stories.mdx
+++ b/apps/ui/src/components/color/color.stories.mdx
@@ -15,281 +15,281 @@ Here's the list of variables available for customization:
   <ColorItem
     title="background"
     colors={{
-      DEFAULT: "var(--background)",
-      body: "var(--background-body)",
-      overlay: "var(--background-overlay)",
-      strong: "var(--background-strong)",
-      stronger: "var(--background-stronger)",
-      strongest: "var(--background-strongest)",
-      weak: "var(--background-weak)",
+      DEFAULT: "hsl(var(--background))",
+      body: "hsl(var(--background-body))",
+      overlay: "hsl(var(--background-overlay))",
+      strong: "hsl(var(--background-strong))",
+      stronger: "hsl(var(--background-stronger))",
+      strongest: "hsl(var(--background-strongest))",
+      weak: "hsl(var(--background-weak))",
     }}
   />
   <ColorItem
     title="background-destructive"
     colors={{
-      DEFAULT: "var(--background-destructive)",
-      strong: "var(--background-destructive-strong)",
-      stronger: "var(--background-destructive-stronger)",
-      strongest: "var(--background-destructive-strongest)",
-      weak: "var(--background-destructive-weak)",
-      weaker: "var(--background-destructive-weaker)",
-      weakest: "var(--background-destructive-weakest)",
+      DEFAULT: "hsl(var(--background-destructive))",
+      strong: "hsl(var(--background-destructive-strong))",
+      stronger: "hsl(var(--background-destructive-stronger))",
+      strongest: "hsl(var(--background-destructive-strongest))",
+      weak: "hsl(var(--background-destructive-weak))",
+      weaker: "hsl(var(--background-destructive-weaker))",
+      weakest: "hsl(var(--background-destructive-weakest))",
     }}
   />
   <ColorItem
     title="background-error"
     colors={{
-      DEFAULT: "var(--background-error)",
-      strong: "var(--background-error-strong)",
-      stronger: "var(--background-error-stronger)",
-      strongest: "var(--background-error-strongest)",
-      weakest: "var(--background-error-weakest)",
+      DEFAULT: "hsl(var(--background-error))",
+      strong: "hsl(var(--background-error-strong))",
+      stronger: "hsl(var(--background-error-stronger))",
+      strongest: "hsl(var(--background-error-strongest))",
+      weakest: "hsl(var(--background-error-weakest))",
     }}
   />
   <ColorItem
     title="background-info"
     colors={{
-      DEFAULT: "var(--background-info)",
-      weakest: "var(--background-info-weakest)",
+      DEFAULT: "hsl(var(--background-info))",
+      weakest: "hsl(var(--background-info-weakest))",
     }}
   />
   <ColorItem
     title="background-body-inverse"
     colors={{
-      DEFAULT: "var(--background-body-inverse)",
+      DEFAULT: "hsl(var(--background-body-inverse))",
     }}
   />
   <ColorItem
     title="background-inverse"
     colors={{
-      DEFAULT: "var(--background-inverse)",
-      strong: "var(--background-inverse-strong)",
-      stronger: "var(--background-inverse-stronger)",
+      DEFAULT: "hsl(var(--background-inverse))",
+      strong: "hsl(var(--background-inverse-strong))",
+      stronger: "hsl(var(--background-inverse-stronger))",
     }}
   />
   <ColorItem
     title="background-primary"
     colors={{
-      DEFAULT: "var(--background-primary)",
-      strong: "var(--background-primary-strong)",
-      stronger: "var(--background-primary-stronger)",
-      strongest: "var(--background-primary-strongest)",
-      weak: "var(--background-primary-weak)",
-      weaker: "var(--background-primary-weaker)",
-      weakest: "var(--background-primary-weakest)",
+      DEFAULT: "hsl(var(--background-primary))",
+      strong: "hsl(var(--background-primary-strong))",
+      stronger: "hsl(var(--background-primary-stronger))",
+      strongest: "hsl(var(--background-primary-strongest))",
+      weak: "hsl(var(--background-primary-weak))",
+      weaker: "hsl(var(--background-primary-weaker))",
+      weakest: "hsl(var(--background-primary-weakest))",
     }}
   />
   <ColorItem
     title="background-success"
     colors={{
-      DEFAULT: "var(--background-success)",
-      weakest: "var(--background-success-weakest)",
+      DEFAULT: "hsl(var(--background-success))",
+      weakest: "hsl(var(--background-success-weakest))",
     }}
   />
   <ColorItem
     title="background-warning"
     colors={{
-      DEFAULT: "var(--background-warning)",
-      weakest: "var(--background-warning-weakest)",
+      DEFAULT: "hsl(var(--background-warning))",
+      weakest: "hsl(var(--background-warning-weakest))",
     }}
   />
   <ColorItem
     title="border"
     colors={{
-      DEFAULT: "var(--border)",
-      strong: "var(--border-strong)",
-      weak: "var(--border-weak)",
-      weaker: "var(--border-weaker)",
-      weakest: "var(--border-weakest)",
+      DEFAULT: "hsl(var(--border))",
+      strong: "hsl(var(--border-strong))",
+      weak: "hsl(var(--border-weak))",
+      weaker: "hsl(var(--border-weaker))",
+      weakest: "hsl(var(--border-weakest))",
     }}
   />
   <ColorItem
     title="border-destructive"
     colors={{
-      DEFAULT: "var(--border-destructive)",
-      strong: "var(--border-destructive-strong)",
-      stronger: "var(--border-destructive-stronger)",
-      strongest: "var(--border-destructive-strongest)",
-      weak: "var(--border-destructive-weak)",
-      weaker: "var(--border-destructive-weaker)",
-      weakest: "var(--border-destructive-weakest)",
+      DEFAULT: "hsl(var(--border-destructive))",
+      strong: "hsl(var(--border-destructive-strong))",
+      stronger: "hsl(var(--border-destructive-stronger))",
+      strongest: "hsl(var(--border-destructive-strongest))",
+      weak: "hsl(var(--border-destructive-weak))",
+      weaker: "hsl(var(--border-destructive-weaker))",
+      weakest: "hsl(var(--border-destructive-weakest))",
     }}
   />
   <ColorItem
     title="border-error"
     colors={{
-      DEFAULT: "var(--border-error)",
-      strong: "var(--border-error-strong)",
-      stronger: "var(--border-error-stronger)",
-      strongest: "var(--border-error-strongest)",
-      weak: "var(--border-error-weak)",
-      weaker: "var(--border-error-weaker)",
-      weakest: "var(--border-error-weakest)",
+      DEFAULT: "hsl(var(--border-error))",
+      strong: "hsl(var(--border-error-strong))",
+      stronger: "hsl(var(--border-error-stronger))",
+      strongest: "hsl(var(--border-error-strongest))",
+      weak: "hsl(var(--border-error-weak))",
+      weaker: "hsl(var(--border-error-weaker))",
+      weakest: "hsl(var(--border-error-weakest))",
     }}
   />
   <ColorItem
     title="border-info"
     colors={{
-      DEFAULT: "var(--border-info)",
-      weak: "var(--border-info-weak)",
-      weaker: "var(--border-info-weaker)",
-      weakest: "var(--border-info-weakest)",
+      DEFAULT: "hsl(var(--border-info))",
+      weak: "hsl(var(--border-info-weak))",
+      weaker: "hsl(var(--border-info-weaker))",
+      weakest: "hsl(var(--border-info-weakest))",
     }}
   />
   <ColorItem
     title="border-inverse"
     colors={{
-      DEFAULT: "var(--border-inverse)",
-      strong: "var(--border-inverse-strong)",
-      stronger: "var(--border-inverse-stronger)",
-      strongest: "var(--border-inverse-strongest)",
-      weaker: "var(--border-inverse-weaker)",
-      weakest: "var(--border-inverse-weakest)",
+      DEFAULT: "hsl(var(--border-inverse))",
+      strong: "hsl(var(--border-inverse-strong))",
+      stronger: "hsl(var(--border-inverse-stronger))",
+      strongest: "hsl(var(--border-inverse-strongest))",
+      weaker: "hsl(var(--border-inverse-weaker))",
+      weakest: "hsl(var(--border-inverse-weakest))",
     }}
   />
   <ColorItem
     title="border-primary"
     colors={{
-      DEFAULT: "var(--border-primary)",
-      strong: "var(--border-primary-strong)",
-      stronger: "var(--border-primary-stronger)",
-      strongest: "var(--border-primary-strongest)",
-      weak: "var(--border-primary-weak)",
-      weaker: "var(--border-primary-weaker)",
-      weakest: "var(--border-primary-weakest)",
+      DEFAULT: "hsl(var(--border-primary))",
+      strong: "hsl(var(--border-primary-strong))",
+      stronger: "hsl(var(--border-primary-stronger))",
+      strongest: "hsl(var(--border-primary-strongest))",
+      weak: "hsl(var(--border-primary-weak))",
+      weaker: "hsl(var(--border-primary-weaker))",
+      weakest: "hsl(var(--border-primary-weakest))",
     }}
   />
   <ColorItem
     title="border-success"
     colors={{
-      DEFAULT: "var(--border-success)",
-      weak: "var(--border-success-weak)",
-      weaker: "var(--border-success-weaker)",
-      weakest: "var(--border-success-weakest)",
+      DEFAULT: "hsl(var(--border-success))",
+      weak: "hsl(var(--border-success-weak))",
+      weaker: "hsl(var(--border-success-weaker))",
+      weakest: "hsl(var(--border-success-weakest))",
     }}
   />
   <ColorItem
     title="border-warning"
     colors={{
-      DEFAULT: "var(--border-warning)",
-      weak: "var(--border-warning-weak)",
-      weaker: "var(--border-warning-weaker)",
-      weakest: "var(--border-warning-weakest)",
+      DEFAULT: "hsl(var(--border-warning))",
+      weak: "hsl(var(--border-warning-weak))",
+      weaker: "hsl(var(--border-warning-weaker))",
+      weakest: "hsl(var(--border-warning-weakest))",
     }}
   />
   <ColorItem
     title="data-visualization"
     colors={{
-      DEFAULT: "var(--data-visualization-1)",
-      2: "var(--data-visualization-2)",
-      3: "var(--data-visualization-3)",
-      4: "var(--data-visualization-4)",
-      5: "var(--data-visualization-5)",
-      6: "var(--data-visualization-6)",
-      7: "var(--data-visualization-7)",
-      8: "var(--data-visualization-8)",
-      9: "var(--data-visualization-9)",
-      10: "var(--data-visualization-10)",
+      1: "hsl(var(--data-visualization-1))",
+      2: "hsl(var(--data-visualization-2))",
+      3: "hsl(var(--data-visualization-3))",
+      4: "hsl(var(--data-visualization-4))",
+      5: "hsl(var(--data-visualization-5))",
+      6: "hsl(var(--data-visualization-6))",
+      7: "hsl(var(--data-visualization-7))",
+      8: "hsl(var(--data-visualization-8))",
+      9: "hsl(var(--data-visualization-9))",
+      10: "hsl(var(--data-visualization-10))",
     }}
   />
   <ColorItem
     title="text"
     colors={{
-      DEFAULT: "var(--text)",
-      weak: "var(--text-weak)",
-      weaker: "var(--text-weaker)",
-      weakest: "var(--text-weakest)",
+      DEFAULT: "hsl(var(--text))",
+      weak: "hsl(var(--text-weak))",
+      weaker: "hsl(var(--text-weaker))",
+      weakest: "hsl(var(--text-weakest))",
     }}
   />
   <ColorItem
     title="text-destructive"
     colors={{
-      DEFAULT: "var(--text-destructive)",
-      strong: "var(--text-destructive-strong)",
-      stronger: "var(--text-destructive-stronger)",
-      strongest: "var(--text-destructive-strongest)",
-      weak: "var(--text-destructive-weak)",
+      DEFAULT: "hsl(var(--text-destructive))",
+      strong: "hsl(var(--text-destructive-strong))",
+      stronger: "hsl(var(--text-destructive-stronger))",
+      strongest: "hsl(var(--text-destructive-strongest))",
+      weak: "hsl(var(--text-destructive-weak))",
     }}
   />
   <ColorItem
     title="text-error"
     colors={{
-      DEFAULT: "var(--text-error)",
-      strong: "var(--text-error-strong)",
-      stronger: "var(--text-error-stronger)",
-      strongest: "var(--text-error-strongest)",
-      weak: "var(--text-error-weak)",
+      DEFAULT: "hsl(var(--text-error))",
+      strong: "hsl(var(--text-error-strong))",
+      stronger: "hsl(var(--text-error-stronger))",
+      strongest: "hsl(var(--text-error-strongest))",
+      weak: "hsl(var(--text-error-weak))",
     }}
   />
   <ColorItem
     title="text-icon"
     colors={{
-      DEFAULT: "var(--text-icon)",
-      error: "var(--text-icon-error)",
-      info: "var(--text-icon-info)",
-      inverse: "var(--text-icon-inverse)",
-      success: "var(--text-icon-success)",
-      warning: "var(--text-icon-warning)",
-      weaker: "var(--text-icon-weaker)",
+      DEFAULT: "hsl(var(--text-icon))",
+      error: "hsl(var(--text-icon-error))",
+      info: "hsl(var(--text-icon-info))",
+      inverse: "hsl(var(--text-icon-inverse))",
+      success: "hsl(var(--text-icon-success))",
+      warning: "hsl(var(--text-icon-warning))",
+      weaker: "hsl(var(--text-icon-weaker))",
     }}
   />
   <ColorItem
     title="text-info"
     colors={{
-      DEFAULT: "var(--text-info)",
-      strong: "var(--text-info-strong)",
+      DEFAULT: "hsl(var(--text-info))",
+      strong: "hsl(var(--text-info-strong))",
     }}
   />
   <ColorItem
     title="text-inverse"
     colors={{
-      DEFAULT: "var(--text-inverse)",
-      weak: "var(--text-inverse-weak)",
-      weaker: "var(--text-inverse-weaker)",
-      weakest: "var(--text-inverse-weakest)",
+      DEFAULT: "hsl(var(--text-inverse))",
+      weak: "hsl(var(--text-inverse-weak))",
+      weaker: "hsl(var(--text-inverse-weaker))",
+      weakest: "hsl(var(--text-inverse-weakest))",
     }}
   />
   <ColorItem
     title="text-link"
     colors={{
-      DEFAULT: "var(--text-link)",
-      strong: "var(--text-link-strong)",
-      stronger: "var(--text-link-stronger)",
-      strongest: "var(--text-link-strongest)",
-      weak: "var(--text-link-weak)",
+      DEFAULT: "hsl(var(--text-link))",
+      strong: "hsl(var(--text-link-strong))",
+      stronger: "hsl(var(--text-link-stronger))",
+      strongest: "hsl(var(--text-link-strongest))",
+      weak: "hsl(var(--text-link-weak))",
     }}
   />
   <ColorItem
     title="text-link-destructive"
     colors={{
-      DEFAULT: "var(--text-link-destructive)",
-      strong: "var(--text-link-destructive-strong)",
-      stronger: "var(--text-link-destructive-stronger)",
-      strongest: "var(--text-link-destructive-strongest)",
-      weak: "var(--text-link-destructive-weak)",
+      DEFAULT: "hsl(var(--text-link-destructive))",
+      strong: "hsl(var(--text-link-destructive-strong))",
+      stronger: "hsl(var(--text-link-destructive-stronger))",
+      strongest: "hsl(var(--text-link-destructive-strongest))",
+      weak: "hsl(var(--text-link-destructive-weak))",
     }}
   />
   <ColorItem
     title="text-primary"
     colors={{
-      DEFAULT: "var(--text-primary)",
-      strong: "var(--text-primary-strong)",
-      stronger: "var(--text-primary-stronger)",
-      strongest: "var(--text-primary-strongest)",
-      weak: "var(--text-primary-weak)",
+      DEFAULT: "hsl(var(--text-primary))",
+      strong: "hsl(var(--text-primary-strong))",
+      stronger: "hsl(var(--text-primary-stronger))",
+      strongest: "hsl(var(--text-primary-strongest))",
+      weak: "hsl(var(--text-primary-weak))",
     }}
   />
   <ColorItem
     title="text-success"
     colors={{
-      DEFAULT: "var(--text-success)",
+      DEFAULT: "hsl(var(--text-success))",
     }}
   />
   <ColorItem
     title="text-warning"
     colors={{
-      DEFAULT: "var(--text-warning)",
-      strong: "var(--text-warning-strong)",
+      DEFAULT: "hsl(var(--text-warning))",
+      strong: "hsl(var(--text-warning-strong))",
     }}
   />
 </ColorPalette>
