feat: rename colors (#924)
* feat: ini storybook dark mode

* chore: update

* feat: ini shu

* chore: update

* feat: rename colors

* fix: configurations

* chore: deprecate shadcn colors

* chore: refactor colors

* chore: bg-primary -> bg-background-primary

* chore: ini rgb

* fix: bg button push

* fix: hsl plain

* chore: update

* chore: update

* chore: update

* chore: text-primary-foreground -> text-text-weakest

* chore: bg-destructive -> bg-background-destructive

* chore: text-destructive-foreground -> text-text-weakest

* chore: ini deprecate secondary

* chore: bg-accent -> bg-background-stronger

* chore: border-input -> border-border-primary-weak

* chore: update

* chore: border-muted -> border-border

* chore: ini ts config

* feat: text-primary -> text-text

* chore: ini update

* chore: ring-ring -> ring-border-info

* feat: bg-muted -> bg-background-stronger

* chore: text-muted-foreground -> text-text-weak

* feat: refactor storybook components

* chore: text-destructive -> text-text-destructive

* chore: bg-secondary -> bg-background-strong

* chore: update

* chore: text-foreground -> text-text

* chore: ini root colors

* chore: bg-card -> bg-background-weak

* chore: border-primary -> border-border-primary

* chore: bg-popover -> bg-background-body

* chore: text-popover-foreground -> text-text

* chore: bg-input -> bg-background-stronger

* chore: text-accent-foreground -> text-text-weak

--- a/apps/ui/src/components/color/color.stories.mdx
+++ b/apps/ui/src/components/color/color.stories.mdx
@@ -13,290 +13,283 @@ Here's the list of variables available for customization:
 
 <ColorPalette>
   <ColorItem
-    title="background-color-background"
+    title="background"
     colors={{
-      DEFAULT: "var(--background-color-background)",
-      body: "var(--background-color-background-body)",
-      overlay: "var(--background-color-background-overlay)",
-      strong: "var(--background-color-background-strong)",
-      stronger: "var(--background-color-background-stronger)",
-      strongest: "var(--background-color-background-strongest)",
-      weak: "var(--background-color-background-weak)",
+      DEFAULT: "hsl(var(--background))",
+      body: "hsl(var(--background-body))",
+      overlay: "hsl(var(--background-overlay))",
+      strong: "hsl(var(--background-strong))",
+      stronger: "hsl(var(--background-stronger))",
+      strongest: "hsl(var(--background-strongest))",
+      weak: "hsl(var(--background-weak))",
     }}
   />
   <ColorItem
-    title="background-destructive-color-background"
+    title="background-destructive"
     colors={{
-      DEFAULT: "var(--background-destructive-color-background-destructive)",
-      strong:
-        "var(--background-destructive-color-background-destructive-strong)",
-      stronger:
-        "var(--background-destructive-color-background-destructive-stronger)",
-      strongest:
-        "var(--background-destructive-color-background-destructive-strongest)",
-      weak: "var(--background-destructive-color-background-destructive-weak)",
-      weaker:
-        "var(--background-destructive-color-background-destructive-weaker)",
-      weakest:
-        "var(--background-destructive-color-background-destructive-weakest)",
+      DEFAULT: "hsl(var(--background-destructive))",
+      strong: "hsl(var(--background-destructive-strong))",
+      stronger: "hsl(var(--background-destructive-stronger))",
+      strongest: "hsl(var(--background-destructive-strongest))",
+      weak: "hsl(var(--background-destructive-weak))",
+      weaker: "hsl(var(--background-destructive-weaker))",
+      weakest: "hsl(var(--background-destructive-weakest))",
     }}
   />
   <ColorItem
-    title="background-error-color-background"
+    title="background-error"
     colors={{
-      DEFAULT: "var(--background-error-color-background-error)",
-      strong: "var(--background-error-color-background-error-strong)",
-      stronger: "var(--background-error-color-background-error-stronger)",
-      strongest: "var(--background-error-color-background-error-strongest)",
-      weakest: "var(--background-error-color-background-error-weakest)",
+      DEFAULT: "hsl(var(--background-error))",
+      strong: "hsl(var(--background-error-strong))",
+      stronger: "hsl(var(--background-error-stronger))",
+      strongest: "hsl(var(--background-error-strongest))",
+      weakest: "hsl(var(--background-error-weakest))",
     }}
   />
   <ColorItem
-    title="background-info-color-background-info"
+    title="background-info"
     colors={{
-      DEFAULT: "var(--background-info-color-background-info)",
-      weakest: "var(--background-info-color-background-info-weakest)",
+      DEFAULT: "hsl(var(--background-info))",
+      weakest: "hsl(var(--background-info-weakest))",
     }}
   />
   <ColorItem
-    title="background-inverse-color-background-body-inverse"
+    title="background-body-inverse"
     colors={{
-      DEFAULT: "var(--background-inverse-color-background-body-inverse)",
+      DEFAULT: "hsl(var(--background-body-inverse))",
     }}
   />
   <ColorItem
-    title="background-inverse-color-background-inverse"
+    title="background-inverse"
     colors={{
-      DEFAULT: "var(--background-inverse-color-background-inverse)",
-      strong: "var(--background-inverse-color-background-inverse-strong)",
-      stronger: "var(--background-inverse-color-background-inverse-stronger)",
+      DEFAULT: "hsl(var(--background-inverse))",
+      strong: "hsl(var(--background-inverse-strong))",
+      stronger: "hsl(var(--background-inverse-stronger))",
     }}
   />
   <ColorItem
-    title="background-primary-color-background-primary"
+    title="background-primary"
     colors={{
-      DEFAULT: "var(--background-primary-color-background-primary)",
-      strong: "var(--background-primary-color-background-primary-strong)",
-      stronger: "var(--background-primary-color-background-primary-stronger)",
-      strongest: "var(--background-primary-color-background-primary-strongest)",
-      weak: "var(--background-primary-color-background-primary-weak)",
-      weaker: "var(--background-primary-color-background-primary-weaker)",
-      weakest: "var(--background-primary-color-background-primary-weakest)",
+      DEFAULT: "hsl(var(--background-primary))",
+      strong: "hsl(var(--background-primary-strong))",
+      stronger: "hsl(var(--background-primary-stronger))",
+      strongest: "hsl(var(--background-primary-strongest))",
+      weak: "hsl(var(--background-primary-weak))",
+      weaker: "hsl(var(--background-primary-weaker))",
+      weakest: "hsl(var(--background-primary-weakest))",
     }}
   />
   <ColorItem
-    title="background-success-color-background-success"
+    title="background-success"
     colors={{
-      DEFAULT: "var(--background-success-color-background-success)",
-      weakest: "var(--background-success-color-background-success-weakest)",
+      DEFAULT: "hsl(var(--background-success))",
+      weakest: "hsl(var(--background-success-weakest))",
     }}
   />
   <ColorItem
-    title="background-warning-color-background-warning"
+    title="background-warning"
     colors={{
-      DEFAULT: "var(--background-warning-color-background-warning)",
-      weakest: "var(--background-warning-color-background-warning-weakest)",
+      DEFAULT: "hsl(var(--background-warning))",
+      weakest: "hsl(var(--background-warning-weakest))",
     }}
   />
   <ColorItem
-    title="border-color-border"
+    title="border"
     colors={{
-      DEFAULT: "var(--border-color-border)",
-      strong: "var(--border-color-border-strong)",
-      weak: "var(--border-color-border-weak)",
-      weaker: "var(--border-color-border-weaker)",
-      weakest: "var(--border-color-border-weakest)",
+      DEFAULT: "hsl(var(--border))",
+      strong: "hsl(var(--border-strong))",
+      weak: "hsl(var(--border-weak))",
+      weaker: "hsl(var(--border-weaker))",
+      weakest: "hsl(var(--border-weakest))",
     }}
   />
   <ColorItem
-    title="border-destructive-color-border-destructive"
+    title="border-destructive"
     colors={{
-      DEFAULT: "var(--border-destructive-color-border-destructive)",
-      strong: "var(--border-destructive-color-border-destructive-strong)",
-      stronger: "var(--border-destructive-color-border-destructive-stronger)",
-      strongest: "var(--border-destructive-color-border-destructive-strongest)",
-      weak: "var(--border-destructive-color-border-destructive-weak)",
-      weaker: "var(--border-destructive-color-border-destructive-weaker)",
-      weakest: "var(--border-destructive-color-border-destructive-weakest)",
+      DEFAULT: "hsl(var(--border-destructive))",
+      strong: "hsl(var(--border-destructive-strong))",
+      stronger: "hsl(var(--border-destructive-stronger))",
+      strongest: "hsl(var(--border-destructive-strongest))",
+      weak: "hsl(var(--border-destructive-weak))",
+      weaker: "hsl(var(--border-destructive-weaker))",
+      weakest: "hsl(var(--border-destructive-weakest))",
     }}
   />
   <ColorItem
-    title="border-error-color-border-error"
+    title="border-error"
     colors={{
-      DEFAULT: "var(--border-error-color-border-error)",
-      strong: "var(--border-error-color-border-error-strong)",
-      stronger: "var(--border-error-color-border-error-stronger)",
-      strongest: "var(--border-error-color-border-error-strongest)",
-      weak: "var(--border-error-color-border-error-weak)",
-      weaker: "var(--border-error-color-border-error-weaker)",
-      weakest: "var(--border-error-color-border-error-weakest)",
+      DEFAULT: "hsl(var(--border-error))",
+      strong: "hsl(var(--border-error-strong))",
+      stronger: "hsl(var(--border-error-stronger))",
+      strongest: "hsl(var(--border-error-strongest))",
+      weak: "hsl(var(--border-error-weak))",
+      weaker: "hsl(var(--border-error-weaker))",
+      weakest: "hsl(var(--border-error-weakest))",
     }}
   />
   <ColorItem
-    title="border-info-color-border-info"
+    title="border-info"
     colors={{
-      DEFAULT: "var(--border-info-color-border-info)",
-      weak: "var(--border-info-color-border-info-weak)",
-      weaker: "var(--border-info-color-border-info-weaker)",
-      weakest: "var(--border-info-color-border-info-weakest)",
+      DEFAULT: "hsl(var(--border-info))",
+      weak: "hsl(var(--border-info-weak))",
+      weaker: "hsl(var(--border-info-weaker))",
+      weakest: "hsl(var(--border-info-weakest))",
     }}
   />
   <ColorItem
-    title="border-inverse-color-border-inverse"
+    title="border-inverse"
     colors={{
-      DEFAULT: "var(--border-inverse-color-border-inverse)",
-      strong: "var(--border-inverse-color-border-inverse-strong)",
-      stronger: "var(--border-inverse-color-border-inverse-stronger)",
-      strongest: "var(--border-inverse-color-border-inverse-strongest)",
-      weaker: "var(--border-inverse-color-border-inverse-weaker)",
-      weakest: "var(--border-inverse-color-border-inverse-weakest)",
+      DEFAULT: "hsl(var(--border-inverse))",
+      strong: "hsl(var(--border-inverse-strong))",
+      stronger: "hsl(var(--border-inverse-stronger))",
+      strongest: "hsl(var(--border-inverse-strongest))",
+      weaker: "hsl(var(--border-inverse-weaker))",
+      weakest: "hsl(var(--border-inverse-weakest))",
     }}
   />
   <ColorItem
-    title="border-primary-color-border-primary"
+    title="border-primary"
     colors={{
-      DEFAULT: "var(--border-primary-color-border-primary)",
-      strong: "var(--border-primary-color-border-primary-strong)",
-      stronger: "var(--border-primary-color-border-primary-stronger)",
-      strongest: "var(--border-primary-color-border-primary-strongest)",
-      weak: "var(--border-primary-color-border-primary-weak)",
-      weaker: "var(--border-primary-color-border-primary-weaker)",
-      weakest: "var(--border-primary-color-border-primary-weakest)",
+      DEFAULT: "hsl(var(--border-primary))",
+      strong: "hsl(var(--border-primary-strong))",
+      stronger: "hsl(var(--border-primary-stronger))",
+      strongest: "hsl(var(--border-primary-strongest))",
+      weak: "hsl(var(--border-primary-weak))",
+      weaker: "hsl(var(--border-primary-weaker))",
+      weakest: "hsl(var(--border-primary-weakest))",
     }}
   />
   <ColorItem
-    title="border-success-color-border-success"
+    title="border-success"
     colors={{
-      DEFAULT: "var(--border-success-color-border-success)",
-      weak: "var(--border-success-color-border-success-weak)",
-      weaker: "var(--border-success-color-border-success-weaker)",
-      weakest: "var(--border-success-color-border-success-weakest)",
+      DEFAULT: "hsl(var(--border-success))",
+      weak: "hsl(var(--border-success-weak))",
+      weaker: "hsl(var(--border-success-weaker))",
+      weakest: "hsl(var(--border-success-weakest))",
     }}
   />
   <ColorItem
-    title="border-warning-color-border-warning"
+    title="border-warning"
     colors={{
-      DEFAULT: "var(--border-warning-color-border-warning)",
-      weak: "var(--border-warning-color-border-warning-weak)",
-      weaker: "var(--border-warning-color-border-warning-weaker)",
-      weakest: "var(--border-warning-color-border-warning-weakest)",
+      DEFAULT: "hsl(var(--border-warning))",
+      weak: "hsl(var(--border-warning-weak))",
+      weaker: "hsl(var(--border-warning-weaker))",
+      weakest: "hsl(var(--border-warning-weakest))",
     }}
   />
   <ColorItem
-    title="data-visualization-color-data-visualization"
+    title="data-visualization"
     colors={{
-      DEFAULT: "var(--data-visualization-color-data-visualization-1)",
-      2: "var(--data-visualization-color-data-visualization-2)",
-      3: "var(--data-visualization-color-data-visualization-3)",
-      4: "var(--data-visualization-color-data-visualization-4)",
-      5: "var(--data-visualization-color-data-visualization-5)",
-      6: "var(--data-visualization-color-data-visualization-6)",
-      7: "var(--data-visualization-color-data-visualization-7)",
-      8: "var(--data-visualization-color-data-visualization-8)",
-      9: "var(--data-visualization-color-data-visualization-9)",
-      10: "var(--data-visualization-color-data-visualization-10)",
+      1: "hsl(var(--data-visualization-1))",
+      2: "hsl(var(--data-visualization-2))",
+      3: "hsl(var(--data-visualization-3))",
+      4: "hsl(var(--data-visualization-4))",
+      5: "hsl(var(--data-visualization-5))",
+      6: "hsl(var(--data-visualization-6))",
+      7: "hsl(var(--data-visualization-7))",
+      8: "hsl(var(--data-visualization-8))",
+      9: "hsl(var(--data-visualization-9))",
+      10: "hsl(var(--data-visualization-10))",
     }}
   />
   <ColorItem
-    title="text-color-text"
+    title="text"
     colors={{
-      DEFAULT: "var(--text-color-text)",
-      weak: "var(--text-color-text-weak)",
-      weaker: "var(--text-color-text-weaker)",
-      weakest: "var(--text-color-text-weakest)",
+      DEFAULT: "hsl(var(--text))",
+      weak: "hsl(var(--text-weak))",
+      weaker: "hsl(var(--text-weaker))",
+      weakest: "hsl(var(--text-weakest))",
     }}
   />
   <ColorItem
-    title="text-destructive-color-text-destructive"
+    title="text-destructive"
     colors={{
-      DEFAULT: "var(--text-destructive-color-text-destructive)",
-      strong: "var(--text-destructive-color-text-destructive-strong)",
-      stronger: "var(--text-destructive-color-text-destructive-stronger)",
-      strongest: "var(--text-destructive-color-text-destructive-strongest)",
-      weak: "var(--text-destructive-color-text-destructive-weak)",
+      DEFAULT: "hsl(var(--text-destructive))",
+      strong: "hsl(var(--text-destructive-strong))",
+      stronger: "hsl(var(--text-destructive-stronger))",
+      strongest: "hsl(var(--text-destructive-strongest))",
+      weak: "hsl(var(--text-destructive-weak))",
     }}
   />
   <ColorItem
-    title="text-error-color-text-error"
+    title="text-error"
     colors={{
-      DEFAULT: "var(--text-error-color-text-error)",
-      strong: "var(--text-error-color-text-error-strong)",
-      stronger: "var(--text-error-color-text-error-stronger)",
-      strongest: "var(--text-error-color-text-error-strongest)",
-      weak: "var(--text-error-color-text-error-weak)",
+      DEFAULT: "hsl(var(--text-error))",
+      strong: "hsl(var(--text-error-strong))",
+      stronger: "hsl(var(--text-error-stronger))",
+      strongest: "hsl(var(--text-error-strongest))",
+      weak: "hsl(var(--text-error-weak))",
     }}
   />
   <ColorItem
-    title="text-icon-color-text-icon"
+    title="text-icon"
     colors={{
-      DEFAULT: "var(--text-icon-color-text-icon)",
-      error: "var(--text-icon-color-text-icon-error)",
-      info: "var(--text-icon-color-text-icon-info)",
-      inverse: "var(--text-icon-color-text-icon-inverse)",
-      success: "var(--text-icon-color-text-icon-success)",
-      warning: "var(--text-icon-color-text-icon-warning)",
-      weaker: "var(--text-icon-color-text-icon-weaker)",
+      DEFAULT: "hsl(var(--text-icon))",
+      error: "hsl(var(--text-icon-error))",
+      info: "hsl(var(--text-icon-info))",
+      inverse: "hsl(var(--text-icon-inverse))",
+      success: "hsl(var(--text-icon-success))",
+      warning: "hsl(var(--text-icon-warning))",
+      weaker: "hsl(var(--text-icon-weaker))",
     }}
   />
   <ColorItem
-    title="text-info-color-text-info"
+    title="text-info"
     colors={{
-      DEFAULT: "var(--text-info-color-text-info)",
-      strong: "var(--text-info-color-text-info-strong)",
+      DEFAULT: "hsl(var(--text-info))",
+      strong: "hsl(var(--text-info-strong))",
     }}
   />
   <ColorItem
-    title="text-inverse-color-text-inverse"
+    title="text-inverse"
     colors={{
-      DEFAULT: "var(--text-inverse-color-text-inverse)",
-      weak: "var(--text-inverse-color-text-inverse-weak)",
-      weaker: "var(--text-inverse-color-text-inverse-weaker)",
-      weakest: "var(--text-inverse-color-text-inverse-weakest)",
+      DEFAULT: "hsl(var(--text-inverse))",
+      weak: "hsl(var(--text-inverse-weak))",
+      weaker: "hsl(var(--text-inverse-weaker))",
+      weakest: "hsl(var(--text-inverse-weakest))",
     }}
   />
   <ColorItem
-    title="text-link-color-text-link"
+    title="text-link"
     colors={{
-      DEFAULT: "var(--text-link-color-text-link)",
-      strong: "var(--text-link-color-text-link-strong)",
-      stronger: "var(--text-link-color-text-link-stronger)",
-      strongest: "var(--text-link-color-text-link-strongest)",
-      weak: "var(--text-link-color-text-link-weak)",
+      DEFAULT: "hsl(var(--text-link))",
+      strong: "hsl(var(--text-link-strong))",
+      stronger: "hsl(var(--text-link-stronger))",
+      strongest: "hsl(var(--text-link-strongest))",
+      weak: "hsl(var(--text-link-weak))",
     }}
   />
   <ColorItem
-    title="text-link-destructive-color-text-link-destructive"
+    title="text-link-destructive"
     colors={{
-      DEFAULT: "var(--text-link-destructive-color-text-link-destructive)",
-      strong: "var(--text-link-destructive-color-text-link-destructive-strong)",
-      stronger:
-        "var(--text-link-destructive-color-text-link-destructive-stronger)",
-      strongest:
-        "var(--text-link-destructive-color-text-link-destructive-strongest)",
-      weak: "var(--text-link-destructive-color-text-link-destructive-weak)",
+      DEFAULT: "hsl(var(--text-link-destructive))",
+      strong: "hsl(var(--text-link-destructive-strong))",
+      stronger: "hsl(var(--text-link-destructive-stronger))",
+      strongest: "hsl(var(--text-link-destructive-strongest))",
+      weak: "hsl(var(--text-link-destructive-weak))",
     }}
   />
   <ColorItem
-    title="text-primary-color-text-primary"
+    title="text-primary"
     colors={{
-      DEFAULT: "var(--text-primary-color-text-primary)",
-      strong: "var(--text-primary-color-text-primary-strong)",
-      stronger: "var(--text-primary-color-text-primary-stronger)",
-      strongest: "var(--text-primary-color-text-primary-strongest)",
-      weak: "var(--text-primary-color-text-primary-weak)",
+      DEFAULT: "hsl(var(--text-primary))",
+      strong: "hsl(var(--text-primary-strong))",
+      stronger: "hsl(var(--text-primary-stronger))",
+      strongest: "hsl(var(--text-primary-strongest))",
+      weak: "hsl(var(--text-primary-weak))",
     }}
   />
   <ColorItem
-    title="text-success-color-text-success"
+    title="text-success"
     colors={{
-      DEFAULT: "var(--text-success-color-text-success)",
+      DEFAULT: "hsl(var(--text-success))",
     }}
   />
   <ColorItem
-    title="text-warning-color-text-warning"
+    title="text-warning"
     colors={{
-      DEFAULT: "var(--text-warning-color-text-warning)",
-      strong: "var(--text-warning-color-text-warning-strong)",
+      DEFAULT: "hsl(var(--text-warning))",
+      strong: "hsl(var(--text-warning-strong))",
     }}
   />
 </ColorPalette>
